--- a/src/components/Main/style.module.css
+++ b/src/components/Main/style.module.css
@@ -2,10 +2,12 @@
     display: flex;
     gap: 103px;
     justify-content: space-between;
-    padding-top: 68px;
+    padding-top: 90px;
     font-size: 22px;
     font-weight: 400;
     line-height: 26.4px;
+    position: relative;
+    z-index: 1;
 }
 
 .aboutMe {
@@ -47,4 +49,41 @@
     width: 467px;
     height: 533px;
     border-radius: 15px;
+}
+
+.contactsModal {
+    width: 500px;
+    margin: 0 auto;
+    background-color: #dedcdf;
+    padding: 40px;
+    border-radius: 15px;
+    border: 1px solid #676266;
+    position: absolute;
+    z-index: 5;
+    left: calc(50% - 250px)
+}
+
+.contactsModal ul {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    font-size: 24px;
+    font-weight: 600;
+    color: #676266;
+  
+}
+
+.contactsModal ul a {
+    font-size: 22px;
+    color: #676266;
+
+}
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+    z-index: 4; 
 }
